--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "@colinrotherham/core",
-  "version": "4.0.1",
-  "description": "Core Project Build",
+  "name": "@colinrotherham/core-wordpress",
+  "version": "0.1.0",
+  "description": "Core Project Build for WordPress",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/colinrotherham/core.git"
+    "url": "https://github.com/colinrotherham/core-wordpress.git"
   },
   "author": "Colin Rotherham",
-  "homepage": "https://github.com/colinrotherham/core",
+  "homepage": "https://github.com/colinrotherham/core-wordpress",
   "devDependencies": {
-    "assemble": "^0.17.1",
     "autoprefixer": "^6.5.4",
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.18.5",
@@ -24,14 +23,13 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
+    "event-stream": "^3.3.4",
     "fg-loadcss": "^1.2.0",
     "fg-loadjs": "^1.0.0",
     "gulp": "^3.9.1",
-    "gulp-accessibility": "^3.0.1",
     "gulp-batch": "^1.0.5",
     "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
-    "gulp-htmlhint": "^0.3.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-load-plugins": "^1.4.0",
     "gulp-newer": "^1.3.0",
@@ -44,8 +42,6 @@
     "gulp-svg2png": "^2.0.2",
     "gulp-uglify": "~2.0.0",
     "gulp-watch": "~4.3.11",
-    "handlebars": "^4.0.6",
-    "handlebars-helpers": "^0.7.5",
     "html5shiv": "^3.7.3",
     "htmlhint-stylish": "^1.0.3",
     "jquery": "^1.12.4",
@@ -63,8 +59,8 @@
     "paths": {
       "src": "./app",
       "build": "./dist",
-      "srcAssets": "./app/assets",
-      "buildAssets": "./dist/assets",
+      "srcAssets": "./app/content/themes/crd-core/assets",
+      "buildAssets": "./dist/content/themes/crd-core/assets",
       "tasks": "./tasks"
     }
   }
