Update repository URL

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     {
       "type": "composer",
-      "url": "https://languages.koodimonni.fi"
+      "url": "https://wp-languages.github.io"
     },
     {
       "type": "package",
