Package updates and align with core

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Colin Rotherham",
   "homepage": "https://github.com/colinrotherham/core-wordpress",
   "scripts": {
-    "build": "cross-env NODE_ENV=production gulp",
-    "dev": "cross-env NODE_ENV=development gulp dev",
-    "test": "gulp test"
+    "test": "npm run test:dependencies && npm audit && npm run test:lint",
+    "test:dependencies": "npm ls --depth=0",
+    "test:lint:js": "eslint ./src/content/themes/crd-core --ext .js,.json,.mjs",
+    "test:lint": "npm run test:lint:js",
+    "build": "cross-env NODE_ENV=production npm test && gulp",
+    "dev": "cross-env NODE_ENV=development gulp dev"
   },
   "browserslist": [
     "last 2 versions",
@@ -21,7 +24,11 @@
     "iOS >= 7"
   ],
   "devDependencies": {
-    "@colinrotherham/core": "^7.4.1",
-    "cross-env": "^5.2.0"
+    "@colinrotherham/core": "^8.0.1",
+    "cross-env": "^5.2.0",
+    "fg-loadcss": "^2.1.0",
+    "fg-loadjs": "^1.1.0",
+    "normalize-scss": "^7.0.1",
+    "picturefill": "^3.0.3"
   }
 }
